--- a/adshelper/src/main/res/values/strings.xml
+++ b/adshelper/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="admob_native_advanced_ad_id">ca-app-pub-3940256099942544/2247696110</string>
     <string name="admob_reward_video_ad_id">ca-app-pub-3940256099942544/5224354917</string>
     <string name="admob_interstitial_ad_reward_id">ca-app-pub-3940256099942544/5354046379</string>
+    <string name="admob_open_ad_id">ca-app-pub-3940256099942544/3419835294</string>
 
 </resources>
